fix: newline and alignment bug in survey option

--- a/lms/static/sass/lms-course.scss
+++ b/lms/static/sass/lms-course.scss
@@ -27,4 +27,13 @@
 
 .percentage {
     white-space: nowrap;
+    width: 55px !important;
+}
+
+.survey-table .survey-option .visible-mobile-only {
+width: calc(100% - 25px) !important;
+}
+
+.survey-table .survey-percentage .visible-mobile-only {
+width: calc(100% - 60px) !important;
 }
